--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 buildscript {
+    ext {
+        kotlin_version = '1.9.0-Beta'
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath 'com.android.tools.build:gradle:8.0.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
     }
 }
